CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_32_20250712_ 058.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=32 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_global_while.exe aco_cuda_global_while.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=32 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_global_while.cu(242): warning #68-D: integer conversion resulted in a change of sign
          if (hashTable[idx].key == -1) return -1.0;
                                    ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

aco_cuda_global_while.cu(253): warning #68-D: integer conversion resulted in a change of sign
          unsigned long long old = atomicCAS(&hashTable[idx].key, -1, key);
                                                                  ^

aco_cuda_global_while.cu(254): warning #68-D: integer conversion resulted in a change of sign
          if (old == -1 || old == key) {
                     ^

aco_cuda_global_while.cu(286): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

aco_cuda_global_while.cu(463): error: identifier "global_params_buffer" is undefined
      double* agent_params = &global_params_buffer[global_agent_id * 42];
                              ^

aco_cuda_global_while.cu(565): error: expected an identifier
      const int 256 = 1024;
                ^

aco_cuda_global_while.cu(647): error: too many arguments in function call
      antColonyOptimization_dev(dev_parametr_value, norm_matrix_probability, agent_node, OF, hashTable, maxOf_dev, minOf_dev, kol_hash_fail, global_params_buffer);
                                                                                                                                             ^

aco_cuda_global_while.cu(651): error: a __global__ function call must be configured
      computeProbabilities(pheromon, kol_enter, norm_matrix_probability);
      ^

aco_cuda_global_while.cu(1113): warning #549-D: variable "hash_fails" is used before its value is set
      metrics.hash_misses = hash_fails;
                            ^

aco_cuda_global_while.cu(1250): warning #549-D: variable "hash_fails" is used before its value is set
      metrics.hash_misses = hash_fails;
                            ^

aco_cuda_global_while.cu(1357): warning #549-D: variable "hash_fails" is used before its value is set
      metrics.hash_misses = hash_fails;
                            ^

4 errors detected in the compilation of "aco_cuda_global_while.cu".
aco_cuda_global_while.cu
========== COMPILATION END ========== 
Exit code: 2 
